Implement JVMCI in funccall benchmark